Fix long double part username overflow

--- a/src/styles/components/_dialog.sass
+++ b/src/styles/components/_dialog.sass
@@ -264,6 +264,7 @@
 					float: left
 					margin-top: 5%
 					margin-left: 5%
+					white-space: nowrap
 
 				.profile-picture
 					float: left
@@ -287,6 +288,7 @@
 					width: 60%
 					float: left
 					margin-left: 5%
+					white-space: nowrap
 
 				.user-last-seen
 					span
